# gradient-cli

./: .coveragerc  .gitignore  =1.24.1  CODEOWNERS  Dockerfile  LICENSE.txt  Makefile  Pipfile  README.md  hello.py  mkdocs.yaml  paperspace.py  pyvenv.cfg  releasenotes.md  remote_test.py  setup.cfg  setup.py  test.py  tox.ini  unset-env
.circleci/: config.yml
.github/: CODEOWNERS
conda/: CONDA_PACKAGE.md
docs/: .buildinfo  .pages  genindex.html  gradient.api_sdk.clients.html  gradient.api_sdk.html  gradient.api_sdk.models.html  gradient.api_sdk.repositories.html  gradient.api_sdk.serializers.html  gradient.cli.html  gradient.cli.utils.html  gradient.commands.html  gradient.html  gradient.wizards.html  index.html  index.md  modules.html  objects.inv  py-modindex.html  search.html  searchindex.js
gradient/: __init__.py  __main__.py  cli_constants.py  client.py  clilogger.py  cliutils.py  config.py  constants.py  exceptions.py  logger.py  login.py  main.py  utils.py  version.py  version_checker.py  workspace.py
old_tests/: myscript.py  test_artifactsGet.py  test_machines.py  test_tensorflow.py
paperspace/: __init__.py  __main__.py  cli.py  client.py  commands.py  config.py  constants.py  exceptions.py  jobs.py  logger.py  login.py  logout.py  machines.py  main.py  method.py  networks.py  scripts.py  templates.py  users.py  utils.py  version.py  workspace.py
source/: conf.py  gradient.api_sdk.clients.rst  gradient.api_sdk.models.rst  gradient.api_sdk.repositories.rst  gradient.api_sdk.rst  gradient.api_sdk.serializers.rst  gradient.cli.rst  gradient.commands.rst  (+3 more)
(+314 files in other folders)
