[metadata]
  name = paperspace
  version = attr: paperspace.__version__
  description = Paperspace Python tools
  long_description = file: README.md
  long_description_content_type = text/markdown
  url = https://github.com/paperspace/gradient-cli
  author = Paperspace Co.
  author_email = info@paperspace.com
  classifiers =
      Intended Audience :: Developers
      Topic :: Software Development :: Libraries
      License :: OSI Approved :: ISC License (ISCL)
      Programming Language :: Python :: 3
  keywords = paperspace, gradient, ml, data science
  license = ISC License

[options]
  package_dir =
    = src
  packages = find:
  python_requires = >=3.6
  install_requires =
    requests
    gql
    pyyaml

[options.packages.find]
  where = src
